...
                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cN1-Ka-xX8">
                                <rect key="frame" x="192" y="738" width="30" height="30"/>
                                <state key="normal" title="Add"/>
                                <connections>
                                    <segue destination="BYZ-38-t0r" kind="show" id="wyV-D9-f9K"/>
...
                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TH3-49-TBs">
                                <rect key="frame" x="164" y="386" width="86" height="30"/>
                                <state key="normal" title="Safe Actions"/>
                                <connections>
                                    <segue destination="RFH-qV-jcX" kind="show" id="6Mz-PC-0S1"/>
...
                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="y9E-Xi-q2L">
                                <rect key="frame" x="46" y="738" width="41" height="30"/>
                                <state key="normal" title="Home"/>
                                <connections>
                                    <segue destination="Sbc-Sg-Zoi" kind="show" id="Mil-Xd-fas"/>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vKD-8i-Hud">
                                <rect key="frame" x="30" y="35" width="34" height="30"/>
                                <state key="normal" title="Back"/>
                                <connections>
                                    <segue destination="tu3-hB-Bb3" kind="show" id="Jdg-Ml-kup"/>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="AxE-es-PbG">
                                <rect key="frame" x="347" y="738" width="32" height="30"/>
                                <state key="normal" title="Next"/>
                                <connections>
                                    <segue destination="VZ2-aY-JtQ" kind="showDetail" id="An7-Ts-mg5"/>
...
                                <rect key="frame" x="55" y="524" width="304" height="34"/>
                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                <state key="normal" title="Already Have an Account?"/>
                                <connections>
                                    <segue destination="ZfO-BX-mXa" kind="show" id="YGq-Y7-z89"/>
...
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <textField opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="Email" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="H3g-Qt-77g">
                                <rect key="frame" x="60" y="347" width="294" height="34"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <textField opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="Password" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Wma-x6-AoG">
                                <rect key="frame" x="60" y="475" width="294" height="34"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
                                <rect key="frame" x="60" y="512" width="294" height="30"/>
                                <color key="backgroundColor" red="0.70077669620000005" green="0.26167911290000001" blue="0.47844570879999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                <state key="normal" title="SignIn">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
...
